# NebulaOS

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  VERSION_LOG.md  build.rs  i686-nebula.json  i686-unknown-none.json  linker.ld
.cargo/: config.toml
.github/workflows/: ci.yml
NebulaFS/: Cargo.toml
NebulaFS/src/: dmu.rs  fs.rs  lib.rs  spa.rs  vdev.rs  zap.rs
isodir/boot/grub/: grub.cfg
src/: main.rs
src/boot/: linker.ld  main.rs  mod.rs
src/drivers/: ata.rs  battery.rs  block.rs  brightness.rs  ec.rs  ethernet.rs  framebuffer.rs  keyboard.rs  mod.rs  mouse.rs  pci.rs  pit.rs  ps2.rs  rtc.rs  serial.rs  speaker.rs  vga.rs  vga_buffer.rs
src/drivers/usb/: mod.rs  uhci.rs
src/fs/: arc.rs  checksum.rs  dmu.rs  journal.rs  mod.rs  spa.rs  test.rs  vdev.rs  vfs.rs  zio.rs  zpl.rs
src/kernel/: Cargo.toml  acpi.rs  allocator.rs  audio.rs  boot.rs  cpu.rs  elf.rs  exceptions.rs  fs.rs  gdt.rs  idt.rs  interrupts.rs  io.rs  jit.rs  linker.ld  main.rs  mod.rs  multiboot.rs  nebula_js.rs  net.rs  paging.rs  panic.rs  pci.rs  power.rs  process.rs  scheduler.rs  symbols.rs  sync.rs  syscall.rs  syscalls.rs  usb.rs
src/kernel/memory/: buddy.rs  mod.rs  paging.rs  protection.rs  slab.rs
src/kernel/services/: mod.rs  network.rs  power.rs  security.rs
src/userspace/: mod.rs
src/userspace/apps/: app.rs  calculator.rs  editor.rs  file_manager.rs  image_viewer.rs  mod.rs  nebula_browser.rs  paint.rs  partition_manager.rs  settings.rs  system_monitor.rs  system_settings.rs  task_manager.rs  terminal.rs  text_editor.rs  web_browser.rs
(+22 files in other folders)
