[package]
name = "nebula_os"
version = "0.0.3-dev3"
edition = "2021"

[dependencies]
spin = "0.9.8"
linked_list_allocator = "0.10.5"
smoltcp = { version = "0.13.0", default-features = false, features = ["medium-ethernet", "proto-ipv4", "socket-tcp", "socket-udp", "alloc"] }
# Settings for bare-metal profile
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
